package com.itmo.mrdvd.collection;

public interface CollectionMetadata {}
